# ovt-agents

./: LICENSE  README.md
control_operator/backend/: .gitignore  README.md  config.json  config.py  main.py  ocu_interface.py  pyproject.toml  webrtc_connection.py
control_operator/backend/control_operator_backend/: __init__.py  agent_handler.py  config.py  main.py  ocu_interface.py  webrtc_connection.py
control_operator/frontend/: README.md  pubspec.yaml
control_operator/frontend/assets/: config.json
control_operator/frontend/lib/: main.dart  main_layout.dart  platform_utils.dart  platform_utils_io.dart  platform_utils_web.dart  style.dart
control_operator/frontend/lib/3d/: scene_widget.dart  scene_widget_native.dart  scene_widget_web.dart  triangle_geometry.dart
control_operator/frontend/lib/comms/: web_rtc_client.dart
control_operator/frontend/lib/components/: icon_text_btn.dart
control_operator/frontend/lib/models/: action_requests_data_model.dart  app_config.dart  asset_data_model.dart  data_models.dart  domain_data_model.dart  gamepad_data_model.dart  gui_data_model.dart  header_data_model.dart  stream_data_model.dart
control_operator/frontend/web/: index.html
control_operator/scripts/: start_backend.sh  start_frontend.sh  stop_backend.sh  stop_frontend.sh
control_operator/specs/: WebRTC_intf_SPECS.md  backend_SPECS.md  backend_description.md  frontend_SPECS.md  frontend_description.md
specs/: WebRTC_client_SPECS.md  WebRTC_server_SPECS.md  uli_app_data_viewer_intf_SPECS.md  uli_app_ocu_intf_SPECS.md
(+14 files in other folders)
