[project]
name = "control-operator-backend"
version = "0.1.0"
description = "Control Operator Backend"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "fastapi",
    "uvicorn",
    "aiortc",
    "websockets",
    "numpy"
]

[project.scripts]
control-operator-backend = "control_operator_backend.main:run_server"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["control_operator_backend"]
